# CAPP-30239-Static

./: .gitignore  README.md  proposal.md  pyproject.toml
data/: cps_import.ipynb  cps_import_log.txt  db.sql  eta_203_names.json  eta_539_names.json  etl_cps.py  etl_eta.py  st_geojson.json  st_names.json  ui_stats.db
scratch/: citations.md  data_scratch.ipynb  initial_draft.ipynb
src/: data_processing.py  run.py  static_final.css  static_final.html
src/charts/: c1.py  c2.py  c3.py  c4.py  c5.py  c6.py  c7.py  c8.py  theme_unemp.py
static_draft/: about.md
static_final/: static_final.html
