[tool.poetry]
name = "capp30239"
version = "0.1.0"
description = "Repo for Autumn 2024 CAPP 30239: Data Visualizations"
authors = ["Michael Rosenbaum <michaelr526@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
altair = "^5.4.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
